--- a/views/team.erb
+++ b/views/team.erb
@@ -5,17 +5,12 @@
   <title>Basketball Team</title>
  </head>
  <body>
-  <h2><%= "Team Name: " + @name %></h2>
-
-    <h3><%= "Coach: " + @coach %></h3>
-
-    <h3><%= "Point Guard: " + @pg %></h3>
- </body>	    <h3><%= "Shooting Guard: " + @sg %></h3>
-    <h3><%= "Small Forward: " + @sf %></h3>
-    <h3><%= "Power Forward: " + @pf %></h3>
-    <h3><%= "Center: " + @c %></h3>
-
-
+ <p> Team Name: <%= @name %> </p>
+     <p> Coach: <%= @coach %> </p>
+     <p> Point Guard: <%= @pg %> </p>
+     <p> Shooting Guard: <%= @sg %> </p>
+     <p> Power Forward: <%= @pf %> </p>
+     <p> Center: <%= @c %> </p>
  </body>
 </html>
 
